Some minor bugs were fixed.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -259,14 +259,14 @@
                     android:singleLine="true"
                     android:textAppearance="?android:attr/textAppearanceSmall"></TextView>
 
-                <Spinner
+                <android.support.v7.widget.AppCompatSpinner
                     android:id="@+id/main_date_selector"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginRight="10dp"></Spinner>
+                    android:layout_marginRight="10dp"></android.support.v7.widget.AppCompatSpinner>
 
                 <TextView
                     android:id="@+id/main_pick"
