--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
@@ -47,7 +47,7 @@
                             android:layout_height="1dp"
                             android:layout_weight="0.25"></View>
 
-                        <android.support.v7.widget.AppCompatImageView
+                        <androidx.appcompat.widget.AppCompatImageView
                             android:id="@+id/main_fortune_teller"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
@@ -259,14 +259,14 @@
                     android:singleLine="true"
                     android:textAppearance="?android:attr/textAppearanceSmall"></TextView>
 
-                <android.support.v7.widget.AppCompatSpinner
+                <androidx.appcompat.widget.AppCompatSpinner
                     android:id="@+id/main_date_selector"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginRight="10dp"></android.support.v7.widget.AppCompatSpinner>
+                    android:layout_marginRight="10dp"></androidx.appcompat.widget.AppCompatSpinner>
 
                 <TextView
                     android:id="@+id/main_pick"
@@ -351,10 +351,10 @@
             android:visibility="gone"></RelativeLayout>
     </RelativeLayout>
 
-    <android.support.design.widget.NavigationView
+    <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:menu="@menu/navigation_menu"></android.support.design.widget.NavigationView>
-</android.support.v4.widget.DrawerLayout>
+        app:menu="@menu/navigation_menu"></com.google.android.material.navigation.NavigationView>
+</androidx.drawerlayout.widget.DrawerLayout>
