--- a/app/src/main/res/layout/dialog_compatibility.xml
+++ b/app/src/main/res/layout/dialog_compatibility.xml
@@ -25,7 +25,7 @@
                 android:layout_height="1dp"
                 android:layout_weight="0.1"></View>
 
-            <android.support.v7.widget.AppCompatAutoCompleteTextView
+            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                 android:id="@+id/dialog_name_field"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -73,7 +73,7 @@
                 android:layout_height="1dp"
                 android:layout_weight="0.1"></View>
 
-            <android.support.v7.widget.AppCompatAutoCompleteTextView
+            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                 android:id="@+id/dialog_other_name_field"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
