--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="BaseTheme" parent="PreferenceFixTheme">
+
+    <style name="BaseTheme" parent="Theme.AppCompat">
         <item name="actionBarSize">56dp</item>
         <item name="android:actionBarSize">56dp</item>
         <item name="actionBarStyle">@style/BaseTheme.ActionBar</item>
