--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -26,9 +26,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:layout_marginBottom="20dp"
             android:gravity="center"
             android:text="@string/input_title"
             android:textAppearance="?android:attr/textAppearanceLarge"></TextView>
@@ -65,9 +65,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:layout_marginBottom="5dp"
             android:gravity="center"
             android:text="@string/input_sex_description"
             android:textAppearance="?android:attr/textAppearanceMedium"
@@ -103,9 +103,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:layout_marginBottom="5dp"
             android:ellipsize="middle"
             android:gravity="center"
             android:singleLine="true"
@@ -120,13 +120,14 @@
             android:layout_gravity="center"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:calendarViewShown="false"></com.app.memoeslink.adivinador.CustomDatePicker>
+            android:calendarViewShown="false"
+            android:datePickerMode="spinner"></com.app.memoeslink.adivinador.CustomDatePicker>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp">
 
             <View
                 android:layout_width="0dp"
