--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,7 +5,7 @@
     android:fitsSystemWindows="true">
 
     <fragment
-        android:name="com.app.memoeslink.adivinador.SettingsActivity$MyPreferenceFragment"
+        android:name="com.app.memoeslink.adivinador.SettingsActivity$CustomPreferenceFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:tag=".SettingsFragment" />
