Changed resource files.

--- a/app/src/main/res/drawable/ic_smiley_birthday_boy.xml
+++ b/app/src/main/res/drawable/ic_smiley_birthday_boy.xml
@@ -121,12 +121,12 @@ c-7.232-1.904-14.432-0.128-18.08,5.2C389.624,62.932,393.128,73.972,402.424,80.34
         android:fillColor="#E24B4B"
         android:pathData="M 411.254 -0.013 C 425.96741802 -0.013 437.895 11.9360723118 437.895 26.676 C 437.895 41.4159276882 425.96741802 53.365 411.254 53.365 C 396.54058198 53.365 384.613 41.4159276882 384.613 26.676 C 384.613 11.9360723118 396.54058198 -0.013 411.254 -0.013 Z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.2"
-        android:strokeAlpha="0.2"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M399.72,32.756c-33.76,18.272-129.344,71.376-174.624,111.856c9.888-0.528,19.232-0.416,28.16,0.304
-c44.784-40.88,118.896-92.016,147.12-111.088C400.168,33.476,399.944,33.124,399.72,32.756z" />
+c44.784-40.88,118.896-92.016,147.12-111.088C400.168,33.476,399.944,33.124,399.72,32.756z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.2" />
     <path
         android:fillColor="#D03F3F"
         android:pathData="M424.28,49.908c-8.544,4.784-19.44,4.672-28.096-1.248c-12.08-8.256-15.2-24.912-6.944-36.976
