--- a/app/src/main/res/drawable/ic_smiley_crying_1.xml
+++ b/app/src/main/res/drawable/ic_smiley_crying_1.xml
@@ -50,41 +50,41 @@ c4.944,3.472,10.528,5.28,16.24,5.872c0.8-2.624,1.52-5.296,1.84-8.112C322.256,376
         android:pathData="M424.448,296.032c3.44,12.528-3.936,25.488-16.464,28.928c-12.528,3.44-25.488-3.936-28.928-16.464
 c-3.456-12.544,10-52.496,10-52.496S421.008,283.504,424.448,296.032z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.2"
-        android:strokeAlpha="0.2"
+        android:fillColor="#FFFFFF"
+        android:pathData="M 412.324 299.71 C 414.886601239 299.71 416.964 302.998020797 416.964 307.054 C 416.964 311.109979203 414.886601239 314.398 412.324 314.398 C 409.761398761 314.398 407.684 311.109979203 407.684 307.054 C 407.684 302.998020797 409.761398761 299.71 412.324 299.71 Z"
         android:strokeWidth="1"
-        android:pathData="M 412.324 299.71 C 414.886601239 299.71 416.964 302.998020797 416.964 307.054 C 416.964 311.109979203 414.886601239 314.398 412.324 314.398 C 409.761398761 314.398 407.684 311.109979203 407.684 307.054 C 407.684 302.998020797 409.761398761 299.71 412.324 299.71 Z" />
+        android:strokeAlpha="0.2" />
     <path
         android:fillColor="#45CBEA"
         android:pathData="M463.008,423.008c0,20.912-16.96,37.872-37.872,37.872c-20.912,0-37.872-16.96-37.872-37.872
 c0-20.912,37.872-77.184,37.872-77.184S463.008,402.096,463.008,423.008z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.2"
-        android:strokeAlpha="0.2"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M445.712,439.28c-3.632,5.36-9.344,7.808-12.816,5.536c-3.344-2.272-3.136-8.512,0.512-14.016
-c3.632-5.36,9.344-7.808,12.816-5.52C449.568,427.536,449.488,433.792,445.712,439.28z" />
+c3.632-5.36,9.344-7.808,12.816-5.52C449.568,427.536,449.488,433.792,445.712,439.28z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.2" />
     <path
         android:fillColor="#45CBEA"
         android:pathData="M87.552,296.032c-3.44,12.528,3.936,25.488,16.464,28.928s25.488-3.936,28.928-16.464
 c3.456-12.544-10-52.496-10-52.496S90.992,283.504,87.552,296.032z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.2"
-        android:strokeAlpha="0.2"
+        android:fillColor="#FFFFFF"
+        android:pathData="M 99.639 302.398 C 103.694979203 302.398 106.983 304.475398761 106.983 307.038 C 106.983 309.600601239 103.694979203 311.678 99.639 311.678 C 95.5830207972 311.678 92.295 309.600601239 92.295 307.038 C 92.295 304.475398761 95.5830207972 302.398 99.639 302.398 Z"
         android:strokeWidth="1"
-        android:pathData="M 99.639 302.398 C 103.694979203 302.398 106.983 304.475398761 106.983 307.038 C 106.983 309.600601239 103.694979203 311.678 99.639 311.678 C 95.5830207972 311.678 92.295 309.600601239 92.295 307.038 C 92.295 304.475398761 95.5830207972 302.398 99.639 302.398 Z" />
+        android:strokeAlpha="0.2" />
     <path
         android:fillColor="#45CBEA"
         android:pathData="M48.992,423.008c0,20.912,16.96,37.872,37.872,37.872s37.872-16.96,37.872-37.872
 c0-20.912-37.872-77.184-37.872-77.184S48.992,402.096,48.992,423.008z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.2"
-        android:strokeAlpha="0.2"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M66.288,439.28c3.632,5.36,9.328,7.808,12.816,5.536c3.344-2.272,3.136-8.512-0.512-14.016
-c-3.648-5.36-9.344-7.808-12.816-5.52C62.432,427.536,62.512,433.792,66.288,439.28z" />
+c-3.648-5.36-9.344-7.808-12.816-5.52C62.432,427.536,62.512,433.792,66.288,439.28z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.2" />
 </vector>
