--- a/app/src/main/res/drawable/ic_smiley_crying_7.xml
+++ b/app/src/main/res/drawable/ic_smiley_crying_7.xml
@@ -40,30 +40,30 @@ c-1.888-9.344-8.816-17.728-19.872-20.736c27.76-5.616,48.512,5.392,58.4,23.888C51
         android:pathData="M452.688,342.465c-13.136,11.04-31.264,2.624-30.608-17.456c0.24-15.264,26.064-57.696-1.2-73.536
 C464.144,272.785,472.256,326.849,452.688,342.465z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.25"
-        android:strokeAlpha="0.25"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M452.528,333.393c-2.16,3.408-5.568,4.96-7.424,3.728
-c-2.016-1.232-1.872-4.944,0.288-8.368c2.16-3.408,5.568-4.96,7.584-3.728C454.992,326.273,454.688,329.985,452.528,333.393z" />
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillAlpha="0.25"
-        android:strokeAlpha="0.25"
+c-2.016-1.232-1.872-4.944,0.288-8.368c2.16-3.408,5.568-4.96,7.584-3.728C454.992,326.273,454.688,329.985,452.528,333.393z"
         android:strokeWidth="1"
+        android:strokeAlpha="0.25" />
+    <path
+        android:fillAlpha="0.25"
+        android:fillColor="#FFFFFF"
         android:pathData="M500.016,261.905c-2.16,3.408-5.568,4.96-7.424,3.728
-c-2.016-1.232-1.872-4.944,0.288-8.368c2.16-3.408,5.568-4.96,7.584-3.728C502.48,254.769,502.176,258.497,500.016,261.905z" />
+c-2.016-1.232-1.872-4.944,0.288-8.368c2.16-3.408,5.568-4.96,7.584-3.728C502.48,254.769,502.176,258.497,500.016,261.905z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.25" />
     <path
         android:fillColor="#65B1EF"
         android:pathData="M480.72,357.265c-3.056-6.96-0.032-14.96,0.944-22.56c0.704-7.2-0.608-14.64-3.776-21.152
 C546.816,347.633,491.792,382.641,480.72,357.265z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.25"
-        android:strokeAlpha="0.25"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M484.816,353.089c-0.496-3.6,3.232-5.488,4.8-0.64
-c0,0,0.096,0.032,0.176,0.16c2.208,1.68,6.336,0.912,7.536,3.408C501.376,363.137,485.824,362.817,484.816,353.089z" />
+c0,0,0.096,0.032,0.176,0.16c2.208,1.68,6.336,0.912,7.536,3.408C501.376,363.137,485.824,362.817,484.816,353.089z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.25" />
     <path
         android:fillColor="#65B1EF"
         android:pathData="M22.992,276.561c9.296,0.8,18.656-5.264,21.6-14.08c2.688-7.872,0.4-16.608,2.048-24.784
@@ -73,30 +73,30 @@ c1.856-9.344,8.752-17.76,19.792-20.8c-27.792-5.52-48.496,5.552-58.32,24.08C-2.64
         android:pathData="M59.296,343.153c13.184,10.992,31.28,2.512,30.544-17.568c-0.288-15.264-26.256-57.6,0.944-73.552
 C47.584,273.505,39.664,327.601,59.296,343.153z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.25"
-        android:strokeAlpha="0.25"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M59.424,334.081c2.176,3.392,5.584,4.944,7.44,3.696
-c2.016-1.248,1.856-4.96-0.32-8.368c-2.176-3.392-5.584-4.944-7.6-3.696C56.928,326.961,57.248,330.673,59.424,334.081z" />
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillAlpha="0.25"
-        android:strokeAlpha="0.25"
+c2.016-1.248,1.856-4.96-0.32-8.368c-2.176-3.392-5.584-4.944-7.6-3.696C56.928,326.961,57.248,330.673,59.424,334.081z"
         android:strokeWidth="1"
+        android:strokeAlpha="0.25" />
+    <path
+        android:fillAlpha="0.25"
+        android:fillColor="#FFFFFF"
         android:pathData="M11.68,262.753c2.176,3.392,5.584,4.944,7.44,3.696
-c2.016-1.248,1.856-4.96-0.32-8.368c-2.176-3.392-5.584-4.928-7.6-3.696C9.2,255.633,9.504,259.345,11.68,262.753z" />
+c2.016-1.248,1.856-4.96-0.32-8.368c-2.176-3.392-5.584-4.928-7.6-3.696C9.2,255.633,9.504,259.345,11.68,262.753z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.25" />
     <path
         android:fillColor="#65B1EF"
         android:pathData="M31.312,358.065c3.024-6.96-0.016-14.96-1.024-22.56c-0.736-7.2,0.56-14.64,3.712-21.152
 C-34.832,348.641,20.32,383.457,31.312,358.065z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.25"
-        android:strokeAlpha="0.25"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M27.2,353.889c0.48-3.6-3.248-5.488-4.8-0.624
-c0,0-0.096,0.032-0.176,0.16c-2.208,1.696-6.32,0.928-7.52,3.44C10.688,364.001,26.24,363.617,27.2,353.889z" />
+c0,0-0.096,0.032-0.176,0.16c-2.208,1.696-6.32,0.928-7.52,3.44C10.688,364.001,26.24,363.617,27.2,353.889z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.25" />
     <path
         android:fillColor="#3E4347"
         android:pathData="M353.696,450.177c-62.688,26.288-118.528-17.6-150.928-40.784
