--- a/app/src/main/res/drawable/ic_smiley_greed.xml
+++ b/app/src/main/res/drawable/ic_smiley_greed.xml
@@ -70,10 +70,10 @@ c-1.44-1.776-3.824-3.152-7.12-4.096L362.448,229.872L362.448,229.872z" />
 c-4.656-15.44-18.784-26.72-35.76-26.72c-12.144,0-22.96,5.824-29.872,14.816c-5.824-3.76-12.752-5.952-20.16-5.952
 C216.016,406.112,203.584,414.432,197.344,426.496z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.2"
-        android:strokeAlpha="0.2"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M298.544,416.224c-1.072,3.232-6.336,4.448-11.6,2.704c-5.392-1.76-8.768-5.792-7.68-9.04
-c1.072-3.232,6.208-4.448,11.6-2.704C296.112,408.944,299.616,412.976,298.544,416.224z" />
+c1.072-3.232,6.208-4.448,11.6-2.704C296.112,408.944,299.616,412.976,298.544,416.224z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.2" />
 </vector>
