--- a/app/src/main/res/drawable/ic_smiley_in_love.xml
+++ b/app/src/main/res/drawable/ic_smiley_in_love.xml
@@ -27,12 +27,12 @@ c13.616-2.144,23.088-12.448,22.08-23.44H124.64z" />
 c4.064-9.92,10.016-18.768,17.488-25.856c8.752-8.464,20.848-10.352,32.368-7.808c3.216,0.752,6.688,1.136,10.32,1.136
 c5.28,0,9.984-0.752,14.368-2.272c10.448-3.408,21.68-2.464,30.432,4.624C306.96,391.952,314.672,402.304,319.632,414.336z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.2"
-        android:strokeAlpha="0.2"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M292.96,394.736c-0.896,3.056-5.408,4.448-10.192,2.96c-4.8-1.472-8.016-5.2-7.232-8.368
-c0.784-3.184,5.328-4.496,10.144-3.088C290.496,387.744,293.776,391.568,292.96,394.736z" />
+c0.784-3.184,5.328-4.496,10.144-3.088C290.496,387.744,293.776,391.568,292.96,394.736z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.2" />
     <path
         android:fillColor="#3E4347"
         android:pathData="M383.632,167.84c-15.872-20.368-40.72-31.424-66.576-29.52c-6.56,0.432-12.352-4.48-12.832-11.104
