--- a/app/src/main/res/drawable/ic_smiley_in_love_5.xml
+++ b/app/src/main/res/drawable/ic_smiley_in_love_5.xml
@@ -62,12 +62,12 @@ c-8.784-6.816-20.672-8.208-30.496-3.008c-4.048,2.08-8.896,3.232-14.448,3.232c-3.
 c-13.392-3.808-28.064-1.728-37.552,8.672c-6.256,6.768-11.008,14.864-14.064,23.776
 C205.072,449.296,229.84,455.472,256.144,455.472z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.25"
-        android:strokeAlpha="0.25"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M286.32,419.344c-1.328,2.912-6.176,3.52-10.832,1.392
-s-7.376-6.176-6.048-9.088c1.264-2.768,6.112-3.376,10.768-1.248C284.848,412.528,287.568,416.576,286.32,419.344z" />
+s-7.376-6.176-6.048-9.088c1.264-2.768,6.112-3.376,10.768-1.248C284.848,412.528,287.568,416.576,286.32,419.344z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.25" />
     <path
         android:fillColor="#3E4347"
         android:pathData="M422.144,117.936c-20.16-5.2-48.496-9.056-71.952-7.536c-23.136,1.008-56.528,13.232-70.464,12.096
