--- a/app/src/main/res/drawable/ic_smiley_laughing.xml
+++ b/app/src/main/res/drawable/ic_smiley_laughing.xml
@@ -54,27 +54,27 @@ c0.032,6.304-5.024,11.44-11.328,11.472C402.144,199.904,401.904,199.904,401.648,1
         android:pathData="M120.224,325.504c-5.776,14.768-22.432,22.048-37.2,16.272s-22.048-22.432-16.272-37.2
 s47.424-42.4,47.424-42.4S126,310.736,120.224,325.504z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.3"
-        android:strokeAlpha="0.3"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M73.664,320.112c-1.168-6.4,1.2-12.112,5.072-12.784c3.792-0.576,7.904,4.048,8.896,10.448
-c1.088,6.304-1.28,12.032-5.152,12.688C78.704,331.056,74.672,326.512,73.664,320.112z" />
+c1.088,6.304-1.28,12.032-5.152,12.688C78.704,331.056,74.672,326.512,73.664,320.112z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.3" />
     <path
         android:fillColor="#45CBEA"
         android:pathData="M391.776,325.504c5.776,14.768,22.432,22.048,37.2,16.272s22.048-22.432,16.272-37.2
 s-47.424-42.4-47.424-42.4S386,310.736,391.776,325.504z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.3"
-        android:strokeAlpha="0.3"
-        android:strokeWidth="1"
-        android:pathData="M438.336,320.112c1.168-6.4-1.2-12.112-5.072-12.784c-3.792-0.576-7.904,4.048-8.896,10.448
-c-1.088,6.304,1.28,12.032,5.152,12.688C433.296,331.056,437.328,326.512,438.336,320.112z" />
-    <path
         android:fillColor="#FFFFFF"
-        android:fillAlpha="0.2"
-        android:strokeAlpha="0.2"
+        android:pathData="M438.336,320.112c1.168-6.4-1.2-12.112-5.072-12.784c-3.792-0.576-7.904,4.048-8.896,10.448
+c-1.088,6.304,1.28,12.032,5.152,12.688C433.296,331.056,437.328,326.512,438.336,320.112z"
         android:strokeWidth="1"
-        android:pathData="M 288.594 389.696 C 293.51596169 389.696 297.506 391.859360089 297.506 394.528 C 297.506 397.196639911 293.51596169 399.36 288.594 399.36 C 283.67203831 399.36 279.682 397.196639911 279.682 394.528 C 279.682 391.859360089 283.67203831 389.696 288.594 389.696 Z" />
+        android:strokeAlpha="0.3" />
+    <path
+        android:fillAlpha="0.2"
+        android:fillColor="#FFFFFF"
+        android:pathData="M 288.594 389.696 C 293.51596169 389.696 297.506 391.859360089 297.506 394.528 C 297.506 397.196639911 293.51596169 399.36 288.594 399.36 C 283.67203831 399.36 279.682 397.196639911 279.682 394.528 C 279.682 391.859360089 283.67203831 389.696 288.594 389.696 Z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.2" />
 </vector>
