--- a/app/src/main/res/drawable/ic_smiley_nervous.xml
+++ b/app/src/main/res/drawable/ic_smiley_nervous.xml
@@ -23,23 +23,23 @@ C372.56,408.208,355.664,432.144,330.464,436.432z" />
         android:pathData="M434.944,113.088c0-14.88-26.96-56.368-26.96-56.368s-26.96,41.472-26.96,56.368
 s12.064,26.96,26.96,26.96C422.88,140.032,434.944,127.968,434.944,113.088z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.2"
-        android:strokeAlpha="0.2"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M423.408,126.448c-2.784,3.248-6.624,4.384-8.752,2.608c-2.144-1.776-1.632-5.856,0.992-9.104
-c2.704-3.168,6.624-4.384,8.752-2.608C426.544,119.2,426.032,123.2,423.408,126.448z" />
+c2.704-3.168,6.624-4.384,8.752-2.608C426.544,119.2,426.032,123.2,423.408,126.448z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.2" />
     <path
         android:fillColor="#45CBEA"
         android:pathData="M498.752,219.376c0-21.312-38.592-80.704-38.592-80.704s-38.592,59.392-38.592,80.704
 s17.28,38.592,38.592,38.592S498.752,240.704,498.752,219.376z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.2"
-        android:strokeAlpha="0.2"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M482.224,238.512c-3.984,4.656-9.472,6.288-12.528,3.728c-3.056-2.544-2.336-8.4,1.424-13.04
-c3.872-4.528,9.472-6.288,12.528-3.728C486.72,228.128,486,233.872,482.224,238.512z" />
+c3.872-4.528,9.472-6.288,12.528-3.728C486.72,228.128,486,233.872,482.224,238.512z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.2" />
     <path
         android:fillColor="#3E4347"
         android:pathData="M117.408,269.376c-3.728-4.56-3.04-11.28,1.52-15.008c18.416-15.024,40.88-25.504,65.12-30.592
