--- a/app/src/main/res/drawable/ic_smiley_nervous_1.xml
+++ b/app/src/main/res/drawable/ic_smiley_nervous_1.xml
@@ -31,21 +31,21 @@ c-1.776-35.216-27.008-54.176-57.968-54.176C317.008,198.88,291.776,217.84,289.984
         android:pathData="M476.528,167.584c0-22.176-40.16-77.504-40.16-77.504s-40.16,55.328-40.16,77.504
 s17.984,40.16,40.16,40.16S476.528,189.776,476.528,167.584z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.2"
-        android:strokeAlpha="0.2"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M458.176,184.608c-3.888,5.472-10.096,7.904-13.616,5.472c-3.648-2.432-3.408-9.008,0.608-14.48
-c3.888-5.472,10.096-8.032,13.744-5.472C462.432,172.56,462.192,179.008,458.176,184.608z" />
+c3.888-5.472,10.096-8.032,13.744-5.472C462.432,172.56,462.192,179.008,458.176,184.608z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.2" />
     <path
         android:fillColor="#45CBEA"
         android:pathData="M392.32,69.232c0-15.696-28.4-54.816-28.4-54.816s-28.4,39.12-28.4,54.816s12.72,28.4,28.4,28.4
 S392.32,84.928,392.32,69.232z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.2"
-        android:strokeAlpha="0.2"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M379.344,81.264c-2.752,3.872-7.136,5.584-9.632,3.872c-2.576-1.728-2.416-6.368,0.432-10.24
-c2.752-3.872,7.136-5.68,9.728-3.872C382.352,72.752,382.176,77.312,379.344,81.264z" />
+c2.752-3.872,7.136-5.68,9.728-3.872C382.352,72.752,382.176,77.312,379.344,81.264z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.2" />
 </vector>
