--- a/app/src/main/res/drawable/ic_smiley_sad_7.xml
+++ b/app/src/main/res/drawable/ic_smiley_sad_7.xml
@@ -40,10 +40,10 @@ c2.88-0.56,4.896-3.936,5.76-8.944C319.152,312.672,293.12,295.472,255.952,295.04z
 c-8.88-8.016-21.024-10.32-31.712-5.984c-6.864,2.672-14.496,4.192-23.04,4.192c-2.368,0-4.608-0.128-6.864-0.384
 c-12.368-1.28-24.288,6.112-30.912,17.824c-3.904,6.848-6.416,14.592-7.616,22.752C212.48,381.12,232.912,372.368,255.952,372.368z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.2"
-        android:strokeAlpha="0.2"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M290.304,360.224c-1.248,2.64-5.904,2.64-10.576,0.304c-4.512-2.176-7.152-6.224-5.904-8.704
-c1.248-2.64,6.064-2.64,10.576-0.464C288.896,353.712,291.552,357.744,290.304,360.224z" />
+c1.248-2.64,6.064-2.64,10.576-0.464C288.896,353.712,291.552,357.744,290.304,360.224z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.2" />
 </vector>
