--- a/app/src/main/res/drawable/ic_smiley_sleeping.xml
+++ b/app/src/main/res/drawable/ic_smiley_sleeping.xml
@@ -51,11 +51,11 @@ c4.72-0.288,7.632-0.416,8.768-0.416h26.288v14.928L387.552,393.728L387.552,393.72
 c-2.32,0.144-5.376,0.24-9.152,0.288l-26.624,0.144v-16.544H504v14.128l-28.816,33.216l-10.16,11.008
 c5.536-0.336,8.976-0.496,10.288-0.496h30.88v17.536H438.896z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.3"
-        android:strokeAlpha="0.3"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M51.136,212.464c-4.832-1.28-7.712-6.256-6.432-11.088c19.472-73.104,76.512-132.304,148.864-154.48
 c4.784-1.456,9.872,1.216,11.328,6.016c1.472,4.784-1.216,9.856-6.016,11.328c-66.4,20.336-118.768,74.688-136.64,141.792
-C60.944,210.896,55.968,213.744,51.136,212.464z" />
+C60.944,210.896,55.968,213.744,51.136,212.464z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.3" />
 </vector>
