--- a/app/src/main/res/drawable/ic_smiley_surprised_5.xml
+++ b/app/src/main/res/drawable/ic_smiley_surprised_5.xml
@@ -72,12 +72,12 @@ c-0.24,0.848-0.832,1.44-1.744,1.808c-1.376,0.576-3.28,0.512-5.552-0.048c-3.584-0
 c-1.312,11.232-1.392,22.688-0.272,33.728c9.344,15.84,18.832,34.704,35.44,38.256C273.232,463.664,300.368,436.704,288.976,405.824
 z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.2"
-        android:strokeAlpha="0.2"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M257.664,391.616c5.456,2.448,10.608,2.736,11.728,0.224c1.168-2.624-2.656-7.008-8.448-9.248
-c-5.92-2.32-11.216-1.68-11.856,0.672C248.352,385.696,252.304,389.12,257.664,391.616z" />
+c-5.92-2.32-11.216-1.68-11.856,0.672C248.352,385.696,252.304,389.12,257.664,391.616z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.2" />
     <path
         android:fillColor="#D03F3F"
         android:pathData="M249.696,376c-0.528,0.112-1.024,0.224-1.504,0.288C248.688,376.176,249.184,376.064,249.696,376z" />
