--- a/app/src/main/res/drawable/ic_smiley_tongue_7.xml
+++ b/app/src/main/res/drawable/ic_smiley_tongue_7.xml
@@ -25,12 +25,12 @@ c-0.208-0.032-0.4-0.08-0.592-0.128c-18.704-4.656-43.024-10.064-48.016,7.248c-0.0
 c-4.192,22.672,2.16,49.904,8.096,76.96c7.968,29.152,27.296,52.208,52.336,54.464c29.248,2.784,52.656-19.552,61.472-52.128
 c6.064-27.824,12.928-55.968,8.608-79.296C320.093,371.28,312.717,365.744,304.317,363.632z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.2"
-        android:strokeAlpha="0.2"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M306.349,383.296c-3.584,2.72-9.952,2.464-13.872-0.08c-4.064-2.544-4.544-5.92-1.312-8.032
-c3.104-2.128,8.944-2.752,13.376-0.752C309.117,376.368,310.109,380.624,306.349,383.296z" />
+c3.104-2.128,8.944-2.752,13.376-0.752C309.117,376.368,310.109,380.624,306.349,383.296z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.2" />
     <path
         android:fillColor="#3E4347"
         android:pathData="M106.173,233.488c-3.008-5.056-1.36-11.616,3.712-14.624c23.424-13.92,48.928-23.904,76.096-29.776
