--- a/app/src/main/res/drawable/ic_emoji_suspicious.xml
+++ b/app/src/main/res/drawable/ic_emoji_suspicious.xml
@@ -4,33 +4,33 @@
     android:viewportWidth="512.0"
     android:viewportHeight="512.0">
     <path
-        android:pathData="M273,238.5m-238.5,0a238.5,238.5 0,1 1,477 0a238.5,238.5 0,1 1,-477 0"
-        android:fillColor="#F7B239" />
+        android:fillColor="#F7B239"
+        android:pathData="M273,238.5m-238.5,0a238.5,238.5 0,1 1,477 0a238.5,238.5 0,1 1,-477 0" />
     <path
-        android:pathData="M147.7,363.8C61.9,278 55.1,143.1 127.4,49.6c-8,6.2 -15.7,12.9 -23.1,20.3c-93.1,93.1 -93.1,244.2 0,337.3s244.2,93.1 337.3,0c7.3,-7.3 14.1,-15 20.3,-23.1C368.4,456.4 233.5,449.6 147.7,363.8z"
-        android:fillColor="#E09B2D" />
+        android:fillColor="#E09B2D"
+        android:pathData="M147.7,363.8C61.9,278 55.1,143.1 127.4,49.6c-8,6.2 -15.7,12.9 -23.1,20.3c-93.1,93.1 -93.1,244.2 0,337.3s244.2,93.1 337.3,0c7.3,-7.3 14.1,-15 20.3,-23.1C368.4,456.4 233.5,449.6 147.7,363.8z" />
     <path
-        android:pathData="M91.3,385.1l-15.7,-8.2l41.5,-79.1l15.7,8.2z"
-        android:fillColor="#4D4D4D" />
+        android:fillColor="#4D4D4D"
+        android:pathData="M91.3,385.1l-15.7,-8.2l41.5,-79.1l15.7,8.2z" />
     <path
-        android:pathData="M97.8,364.5l-8.9,-4.7c-11.2,-5.9 -25.1,-1.6 -31,9.7L3.2,473.7c-5.9,11.2 -1.6,25.1 9.7,31l8.9,4.7c11.2,5.9 25.1,1.6 31,-9.7l54.7,-104.2C113.3,384.3 109,370.4 97.8,364.5z"
-        android:fillColor="#F95428" />
+        android:fillColor="#F95428"
+        android:pathData="M97.8,364.5l-8.9,-4.7c-11.2,-5.9 -25.1,-1.6 -31,9.7L3.2,473.7c-5.9,11.2 -1.6,25.1 9.7,31l8.9,4.7c11.2,5.9 25.1,1.6 31,-9.7l54.7,-104.2C113.3,384.3 109,370.4 97.8,364.5z" />
     <path
-        android:pathData="M425,184.8h-92.9c-4.9,0 -8.8,4 -8.8,8.8c0,4.9 4,8.8 8.8,8.8h31.5c-5.4,4.4 -8.9,11.1 -8.9,18.6c0,5.7 2,10.9 5.3,15h-12.6c-4.9,0 -8.8,4 -8.8,8.8c0,4.9 4,8.8 8.8,8.8h62.2c4.9,0 8.8,-4 8.8,-8.8c0,-4.9 -4,-8.8 -8.8,-8.8h-12.6c3.3,-4.1 5.3,-9.3 5.3,-15c0,-7.5 -3.5,-14.2 -8.9,-18.6h31.5c4.9,0 8.8,-4 8.8,-8.8C433.9,188.8 429.9,184.8 425,184.8z"
-        android:fillColor="#4D4D4D" />
+        android:fillColor="#4D4D4D"
+        android:pathData="M425,184.8h-92.9c-4.9,0 -8.8,4 -8.8,8.8c0,4.9 4,8.8 8.8,8.8h31.5c-5.4,4.4 -8.9,11.1 -8.9,18.6c0,5.7 2,10.9 5.3,15h-12.6c-4.9,0 -8.8,4 -8.8,8.8c0,4.9 4,8.8 8.8,8.8h62.2c4.9,0 8.8,-4 8.8,-8.8c0,-4.9 -4,-8.8 -8.8,-8.8h-12.6c3.3,-4.1 5.3,-9.3 5.3,-15c0,-7.5 -3.5,-14.2 -8.9,-18.6h31.5c4.9,0 8.8,-4 8.8,-8.8C433.9,188.8 429.9,184.8 425,184.8z" />
     <path
-        android:pathData="M341.9,352.8h-137.9c-4.9,0 -8.8,4 -8.8,8.8s4,8.8 8.8,8.8h137.9c4.9,0 8.8,-4 8.8,-8.8S346.8,352.8 341.9,352.8z"
-        android:fillColor="#4D4D4D" />
+        android:fillColor="#4D4D4D"
+        android:pathData="M341.9,352.8h-137.9c-4.9,0 -8.8,4 -8.8,8.8s4,8.8 8.8,8.8h137.9c4.9,0 8.8,-4 8.8,-8.8S346.8,352.8 341.9,352.8z" />
     <path
-        android:pathData="M306.7,398.8h-67.4c-4.9,0 -8.8,-4 -8.8,-8.8c0,-4.9 4,-8.8 8.8,-8.8h67.4c4.9,0 8.8,4 8.8,8.8C315.5,394.8 311.6,398.8 306.7,398.8z"
-        android:fillColor="#E09B2D" />
+        android:fillColor="#E09B2D"
+        android:pathData="M306.7,398.8h-67.4c-4.9,0 -8.8,-4 -8.8,-8.8c0,-4.9 4,-8.8 8.8,-8.8h67.4c4.9,0 8.8,4 8.8,8.8C315.5,394.8 311.6,398.8 306.7,398.8z" />
     <path
-        android:pathData="M167.4,221.1m-91.2,0a91.2,91.2 0,1 1,182.4 0a91.2,91.2 0,1 1,-182.4 0"
-        android:fillColor="#A6DAF7" />
+        android:fillColor="#A6DAF7"
+        android:pathData="M167.4,221.1m-91.2,0a91.2,91.2 0,1 1,182.4 0a91.2,91.2 0,1 1,-182.4 0" />
     <path
-        android:pathData="M219.7,121.6c54.9,28.8 76.1,96.9 47.3,151.8c-19.5,37.1 -57.7,60.2 -99.6,60.2c-18.1,0 -36.1,-4.5 -52.2,-12.9c-26.6,-14 -46.1,-37.4 -55.1,-66.1c-8.9,-28.7 -6.2,-59.1 7.8,-85.7c19.5,-37.1 57.6,-60.1 99.6,-60.1C185.5,108.7 203.6,113.2 219.7,121.6zM238.1,258.3c20.5,-39.1 5.5,-87.4 -33.6,-107.9c-39.1,-20.5 -87.4,-5.5 -107.9,33.6c-20.5,39.1 -5.5,87.4 33.6,107.9C169.3,312.4 217.6,297.4 238.1,258.3z"
-        android:fillColor="#B27214" />
+        android:fillColor="#B27214"
+        android:pathData="M219.7,121.6c54.9,28.8 76.1,96.9 47.3,151.8c-19.5,37.1 -57.7,60.2 -99.6,60.2c-18.1,0 -36.1,-4.5 -52.2,-12.9c-26.6,-14 -46.1,-37.4 -55.1,-66.1c-8.9,-28.7 -6.2,-59.1 7.8,-85.7c19.5,-37.1 57.6,-60.1 99.6,-60.1C185.5,108.7 203.6,113.2 219.7,121.6zM238.1,258.3c20.5,-39.1 5.5,-87.4 -33.6,-107.9c-39.1,-20.5 -87.4,-5.5 -107.9,33.6c-20.5,39.1 -5.5,87.4 33.6,107.9C169.3,312.4 217.6,297.4 238.1,258.3z" />
     <path
-        android:pathData="M167.4,221.1m-32.4,0a32.4,32.4 0,1 1,64.8 0a32.4,32.4 0,1 1,-64.8 0"
-        android:fillColor="#666666" />
+        android:fillColor="#666666"
+        android:pathData="M167.4,221.1m-32.4,0a32.4,32.4 0,1 1,64.8 0a32.4,32.4 0,1 1,-64.8 0" />
 </vector>
