--- a/app/src/main/res/drawable/ic_list_menu.xml
+++ b/app/src/main/res/drawable/ic_list_menu.xml
@@ -1,30 +1,30 @@
-<vector android:height="24dp"
-    android:viewportHeight="30"
-    android:viewportWidth="30"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:height="24dp"
+    android:viewportWidth="30"
+    android:viewportHeight="30">
     <path
         android:fillColor="#00000000"
         android:pathData="M3,15L27,15"
+        android:strokeWidth="2"
         android:strokeAlpha="1"
         android:strokeColor="#ffffff"
         android:strokeLineCap="round"
-        android:strokeLineJoin="round"
-        android:strokeWidth="2" />
+        android:strokeLineJoin="round" />
     <path
         android:fillColor="#00000000"
         android:pathData="M3,8L27,8"
+        android:strokeWidth="2"
         android:strokeAlpha="1"
         android:strokeColor="#ffffff"
         android:strokeLineCap="round"
-        android:strokeLineJoin="round"
-        android:strokeWidth="2" />
+        android:strokeLineJoin="round" />
     <path
         android:fillColor="#00000000"
         android:pathData="M3,22L27,22"
+        android:strokeWidth="2"
         android:strokeAlpha="1"
         android:strokeColor="#f5ffff"
         android:strokeLineCap="round"
-        android:strokeLineJoin="round"
-        android:strokeWidth="2" />
+        android:strokeLineJoin="round" />
 </vector>
