--- a/app/src/main/res/drawable/ic_smiley_angry_1.xml
+++ b/app/src/main/res/drawable/ic_smiley_angry_1.xml
@@ -4,47 +4,47 @@
     android:viewportWidth="512"
     android:viewportHeight="512">
     <path
-        android:pathData="M256,256m-256,0a256,256 0,1 1,512 0a256,256 0,1 1,-512 0"
-        android:fillColor="#FFD93B" />
+        android:fillColor="#FFD93B"
+        android:pathData="M256,256m-256,0a256,256 0,1 1,512 0a256,256 0,1 1,-512 0" />
     <path
-        android:pathData="M512,256c0,141.44 -114.64,256 -256,256c-80.48,0 -152.32,-37.12 -199.28,-95.28c43.92,35.52 99.84,56.72 160.72,56.72c141.36,0 256,-114.56 256,-256c0,-60.88 -21.2,-116.8 -56.72,-160.72C474.8,103.68 512,175.52 512,256z"
-        android:fillColor="#F4C534" />
+        android:fillColor="#F4C534"
+        android:pathData="M512,256c0,141.44 -114.64,256 -256,256c-80.48,0 -152.32,-37.12 -199.28,-95.28c43.92,35.52 99.84,56.72 160.72,56.72c141.36,0 256,-114.56 256,-256c0,-60.88 -21.2,-116.8 -56.72,-160.72C474.8,103.68 512,175.52 512,256z" />
     <path
-        android:pathData="M256,382.144m-63.856,0a63.856,63.856 0,1 1,127.712 0a63.856,63.856 0,1 1,-127.712 0"
-        android:fillColor="#3E4347" />
+        android:fillColor="#3E4347"
+        android:pathData="M256,382.144m-63.856,0a63.856,63.856 0,1 1,127.712 0a63.856,63.856 0,1 1,-127.712 0" />
     <path
-        android:pathData="M256,446c16.848,0 32.128,-6.576 43.536,-17.232c-0.256,-6.912 -2.08,-13.424 -5.168,-19.104c-6.016,-10.96 -19.232,-15.808 -30.848,-11.392c-6.768,2.48 -14.4,3.984 -23.008,3.984c-0.112,0 -0.112,0 -0.224,0c-12.896,-0.112 -25.04,7.952 -27.296,20.64c-0.336,1.904 -0.496,3.872 -0.576,5.856C223.856,439.424 239.136,446 256,446z"
-        android:fillColor="#E24B4B" />
+        android:fillColor="#E24B4B"
+        android:pathData="M256,446c16.848,0 32.128,-6.576 43.536,-17.232c-0.256,-6.912 -2.08,-13.424 -5.168,-19.104c-6.016,-10.96 -19.232,-15.808 -30.848,-11.392c-6.768,2.48 -14.4,3.984 -23.008,3.984c-0.112,0 -0.112,0 -0.224,0c-12.896,-0.112 -25.04,7.952 -27.296,20.64c-0.336,1.904 -0.496,3.872 -0.576,5.856C223.856,439.424 239.136,446 256,446z" />
     <path
-        android:pathData="M309.056,346.64C297.6,329.552 278.112,318.288 256,318.288s-41.6,11.248 -53.056,28.336C213.2,356 233.104,357.12 256,357.12S298.8,356 309.056,346.64z"
-        android:fillColor="#FFFFFF" />
-    <path
-        android:pathData="M285.832,413.109a5.04,8.816 111.297,1 0,-16.428 -6.404a5.04,8.816 111.297,1 0,16.428 6.404z"
-        android:strokeAlpha="0.2"
         android:fillColor="#FFFFFF"
-        android:fillAlpha="0.2" />
+        android:pathData="M309.056,346.64C297.6,329.552 278.112,318.288 256,318.288s-41.6,11.248 -53.056,28.336C213.2,356 233.104,357.12 256,357.12S298.8,356 309.056,346.64z" />
     <path
-        android:pathData="M280.064,159.152c-2.256,-5.44 0.352,-11.68 5.792,-13.92l78.016,-32.16c5.44,-2.272 11.68,0.352 13.92,5.792c2.256,5.44 -0.352,11.68 -5.792,13.92l-78.016,32.16C288.528,167.2 282.288,164.576 280.064,159.152z"
-        android:fillColor="#E9B02C" />
+        android:fillAlpha="0.2"
+        android:fillColor="#FFFFFF"
+        android:pathData="M285.832,413.109a5.04,8.816 111.297,1 0,-16.428 -6.404a5.04,8.816 111.297,1 0,16.428 6.404z"
+        android:strokeAlpha="0.2" />
     <path
-        android:pathData="M218.016,164.944L140,132.784c-5.44,-2.24 -8.048,-8.48 -5.792,-13.92c2.24,-5.44 8.48,-8.064 13.92,-5.792l78.016,32.16c5.44,2.24 8.048,8.48 5.792,13.92C229.712,164.576 223.472,167.2 218.016,164.944z"
-        android:fillColor="#E9B02C" />
+        android:fillColor="#E9B02C"
+        android:pathData="M280.064,159.152c-2.256,-5.44 0.352,-11.68 5.792,-13.92l78.016,-32.16c5.44,-2.272 11.68,0.352 13.92,5.792c2.256,5.44 -0.352,11.68 -5.792,13.92l-78.016,32.16C288.528,167.2 282.288,164.576 280.064,159.152z" />
     <path
-        android:pathData="M119.6,232.608a58,58.048 0,1 0,116 0a58,58.048 0,1 0,-116 0z"
-        android:fillColor="#FFFFFF" />
+        android:fillColor="#E9B02C"
+        android:pathData="M218.016,164.944L140,132.784c-5.44,-2.24 -8.048,-8.48 -5.792,-13.92c2.24,-5.44 8.48,-8.064 13.92,-5.792l78.016,32.16c5.44,2.24 8.048,8.48 5.792,13.92C229.712,164.576 223.472,167.2 218.016,164.944z" />
     <path
-        android:pathData="M177.6,232.608m-32,0a32,32 0,1 1,64 0a32,32 0,1 1,-64 0"
-        android:fillColor="#3E4347" />
+        android:fillColor="#FFFFFF"
+        android:pathData="M119.6,232.608a58,58.048 0,1 0,116 0a58,58.048 0,1 0,-116 0z" />
     <path
-        android:pathData="M195.986,225.34a7.392,5.456 46.276,1 0,-10.219 -10.684a7.392,5.456 46.276,1 0,10.219 10.684z"
-        android:fillColor="#5A5F63" />
+        android:fillColor="#3E4347"
+        android:pathData="M177.6,232.608m-32,0a32,32 0,1 1,64 0a32,32 0,1 1,-64 0" />
     <path
-        android:pathData="M276.432,232.608a58,58.048 0,1 0,116 0a58,58.048 0,1 0,-116 0z"
-        android:fillColor="#FFFFFF" />
+        android:fillColor="#5A5F63"
+        android:pathData="M195.986,225.34a7.392,5.456 46.276,1 0,-10.219 -10.684a7.392,5.456 46.276,1 0,10.219 10.684z" />
     <path
-        android:pathData="M334.416,232.608m-32,0a32,32 0,1 1,64 0a32,32 0,1 1,-64 0"
-        android:fillColor="#3E4347" />
+        android:fillColor="#FFFFFF"
+        android:pathData="M276.432,232.608a58,58.048 0,1 0,116 0a58,58.048 0,1 0,-116 0z" />
     <path
-        android:pathData="M352.774,225.308a7.392,5.456 46.276,1 0,-10.219 -10.684a7.392,5.456 46.276,1 0,10.219 10.684z"
-        android:fillColor="#5A5F63" />
+        android:fillColor="#3E4347"
+        android:pathData="M334.416,232.608m-32,0a32,32 0,1 1,64 0a32,32 0,1 1,-64 0" />
+    <path
+        android:fillColor="#5A5F63"
+        android:pathData="M352.774,225.308a7.392,5.456 46.276,1 0,-10.219 -10.684a7.392,5.456 46.276,1 0,10.219 10.684z" />
 </vector>
