--- a/app/src/main/res/drawable/ic_smiley_crying.xml
+++ b/app/src/main/res/drawable/ic_smiley_crying.xml
@@ -40,23 +40,23 @@ C196.144,150.72,152.976,176.032,105.456,160.992z" />
         android:pathData="M444.928,303.168c0,14.4-11.632,26.032-26.032,26.032c-14.4,0-26.032-11.632-26.032-26.032
 c0-14.288,26.032-55.632,26.032-55.632S444.928,288.88,444.928,303.168z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.2"
-        android:strokeAlpha="0.2"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M433.712,315.44c-2.928,3.536-7.024,4.848-9.232,3.088c-2.192-1.856-1.648-6.08,1.184-9.632
-c2.912-3.44,7.008-4.736,9.216-2.992C437.072,307.76,436.528,311.984,433.712,315.44z" />
+c2.912-3.44,7.008-4.736,9.216-2.992C437.072,307.76,436.528,311.984,433.712,315.44z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.2" />
     <path
         android:fillColor="#45CBEA"
         android:pathData="M438.992,437.312c0,19.552-15.792,35.344-35.344,35.344s-35.344-15.792-35.344-35.344
 c0-19.408,35.344-75.536,35.344-75.536S438.992,417.904,438.992,437.312z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.2"
-        android:strokeAlpha="0.2"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M424.048,451.888c-3.648,5.056-9.072,7.2-12.224,5.024c-3.136-2.304-2.768-8.096,0.72-13.168
-c3.632-4.912,9.056-7.056,12.208-4.88C427.904,441.184,427.536,446.96,424.048,451.888z" />
+c3.632-4.912,9.056-7.056,12.208-4.88C427.904,441.184,427.536,446.96,424.048,451.888z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.2" />
     <path
         android:fillColor="#3E4347"
         android:pathData="M347.376,404.448c-61.088-15.808-125.2-15.808-186.288,0.016c-7.088,1.84-14.272-3.44-13.84-10.704
