--- a/app/src/main/res/drawable/ic_smiley_crying_4.xml
+++ b/app/src/main/res/drawable/ic_smiley_crying_4.xml
@@ -58,32 +58,32 @@ s93.504,27.92,103.952,66.368c1.456,5.328-1.696,10.832-7.024,12.288C347.584,428.7
         android:pathData="M134.912,372.336c0,17.216-14.064,31.28-31.424,31.28c-17.216,0-31.28-14.064-31.28-31.28
 c0-17.36,31.28-62.656,31.28-62.656S134.912,354.976,134.912,372.336z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.3"
-        android:strokeAlpha="0.3"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M119.024,388.688c-4.448,4.24-10,5.728-12.784,2.96
-c-2.592-2.592-1.296-8.32,3.152-12.592c4.448-4.432,10-5.92,12.784-3.152C124.752,378.496,123.456,384.24,119.024,388.688z" />
+c-2.592-2.592-1.296-8.32,3.152-12.592c4.448-4.432,10-5.92,12.784-3.152C124.752,378.496,123.456,384.24,119.024,388.688z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.3" />
     <path
         android:fillColor="#65B1EF"
         android:pathData="M130.64,474.832c0,14.864-12.16,27.024-27.152,27.024c-14.88,0-27.024-12.16-27.024-27.024
 c0-15.008,27.024-54.144,27.024-54.144S130.64,459.824,130.64,474.832z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.3"
-        android:strokeAlpha="0.3"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M116.912,488.96c-3.84,3.664-8.64,4.96-11.04,2.56
-c-2.24-2.24-1.12-7.2,2.72-10.88c3.84-3.84,8.64-5.12,11.04-2.72C121.872,480.16,120.752,485.12,116.912,488.96z" />
+c-2.24-2.24-1.12-7.2,2.72-10.88c3.84-3.84,8.64-5.12,11.04-2.72C121.872,480.16,120.752,485.12,116.912,488.96z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.3" />
     <path
         android:fillColor="#65B1EF"
         android:pathData="M466.72,364.4c0,17.2-14.064,31.28-31.424,31.28c-17.216,0-31.28-14.064-31.28-31.28
 c0-17.36,31.28-62.656,31.28-62.656S466.72,347.04,466.72,364.4z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.3"
-        android:strokeAlpha="0.3"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M450.832,380.752c-4.448,4.256-10,5.728-12.784,2.96
-c-2.592-2.592-1.296-8.32,3.152-12.592c4.448-4.432,10-5.92,12.768-3.152C456.576,370.56,455.28,376.304,450.832,380.752z" />
+c-2.592-2.592-1.296-8.32,3.152-12.592c4.448-4.432,10-5.92,12.768-3.152C456.576,370.56,455.28,376.304,450.832,380.752z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.3" />
 </vector>
