--- a/app/src/main/res/drawable/ic_smiley_dead.xml
+++ b/app/src/main/res/drawable/ic_smiley_dead.xml
@@ -51,10 +51,10 @@ l53.472-53.328L406.32,280c3.072,3.072,16.864-10.752,13.776-13.824L366.672,212.78
 c-53.088,28.88-79.568,4.16-90.704-40.768c-9.408-37.92-40.704-32.848-40.704-32.848l-0.288,0.272
 C283.136,396.864,288.16,423.04,289.36,447.024z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.2"
-        android:strokeAlpha="0.2"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M343.76,370.144c-0.544,3.84-8.176,1.664-18.096,0.992
-c-9.92-0.336-18.624,1.008-18.08-2.832c0.528-3.84,8.848-6.528,19.024-6.016C336.512,362.8,344.016,366.304,343.76,370.144z" />
+c-9.92-0.336-18.624,1.008-18.08-2.832c0.528-3.84,8.848-6.528,19.024-6.016C336.512,362.8,344.016,366.304,343.76,370.144z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.2" />
 </vector>
