--- a/app/src/main/res/drawable/ic_smiley_in_love_1.xml
+++ b/app/src/main/res/drawable/ic_smiley_in_love_1.xml
@@ -24,22 +24,22 @@ C354.192,450.496,157.824,450.528,124.752,345.136z" />
 c0.128-18.544,15.2-33.472,33.744-33.344c13.296,0.08,24.72,7.92,30.032,19.152c5.408-11.168,16.928-18.848,30.24-18.752
 C211.312,156.128,226.24,171.264,226.128,189.792z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.3"
-        android:strokeAlpha="0.3"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M209.616,194.016c-3.488,3.44-9.552,1.696-13.504-3.856c-3.968-5.648-4.336-12.912-0.848-16.336
-c3.488-3.44,9.568-1.616,13.52,3.952C212.736,183.328,213.104,190.592,209.616,194.016z" />
+c3.488-3.44,9.568-1.616,13.52,3.952C212.736,183.328,213.104,190.592,209.616,194.016z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.3" />
     <path
         android:fillColor="#E24B4B"
         android:pathData="M413.232,189.792c-0.256,38.08-64.176,75.504-64.176,75.504s-63.424-38.256-63.168-76.352
 c0.128-18.544,15.2-33.472,33.744-33.344c13.296,0.08,24.72,7.92,30.032,19.152c5.424-11.168,16.944-18.848,30.24-18.752
 C398.432,156.128,413.36,171.264,413.232,189.792z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.3"
-        android:strokeAlpha="0.3"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M396.72,194.016c-3.488,3.44-9.552,1.696-13.504-3.856c-3.984-5.648-4.336-12.912-0.848-16.336
-c3.488-3.44,9.568-1.616,13.52,3.952C399.856,183.328,400.224,190.592,396.72,194.016z" />
+c3.488-3.44,9.568-1.616,13.52,3.952C399.856,183.328,400.224,190.592,396.72,194.016z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.3" />
 </vector>
