--- a/app/src/main/res/drawable/ic_smiley_in_love_4.xml
+++ b/app/src/main/res/drawable/ic_smiley_in_love_4.xml
@@ -14,13 +14,13 @@
 c43.92,35.52,99.84,56.72,160.72,56.72c141.36,0,256-114.56,256-256c0-60.88-21.2-116.8-56.72-160.72
 C474.8,103.68,512,175.52,512,256z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.3"
-        android:strokeAlpha="0.3"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M51.136,212.464c-4.832-1.28-7.712-6.256-6.432-11.088c19.472-73.104,76.512-132.304,148.864-154.48
 c4.784-1.456,9.856,1.216,11.328,6.016c1.472,4.784-1.216,9.856-6.016,11.328c-66.4,20.336-118.768,74.688-136.64,141.792
-C60.944,210.896,55.968,213.744,51.136,212.464z" />
+C60.944,210.896,55.968,213.744,51.136,212.464z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.3" />
     <path
         android:fillColor="#E24B4B"
         android:pathData="M171.968,289.456c-1.904,2.096-4.848,2.656-7.408,1.52c-17.76-8.352-86.592-42.448-93.136-74.912
@@ -31,12 +31,12 @@ c22.4-4.464,44.336,10.064,48.896,32.56C235.376,216.832,185.152,274.848,171.968,2
         android:pathData="M182.592,277.12c-4.368,5.312-8.16,9.488-10.64,12.256c-1.904,2.08-4.848,2.752-7.408,1.616
 c-17.76-8.352-86.592-42.448-93.136-74.912c-1.328-6.368-0.944-12.528,0.576-18.416C72.656,201.84,82.24,250.448,182.592,277.12z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.15"
-        android:strokeAlpha="0.15"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M212.416,177.264c-1.536,3.488-8.256,3.968-15.136,0.896c-6.896-2.976-11.312-8.208-9.76-11.792
-c1.44-3.504,8.24-3.872,15.136-0.896C209.552,168.448,213.856,173.76,212.416,177.264z" />
+c1.44-3.504,8.24-3.872,15.136-0.896C209.552,168.448,213.856,173.76,212.416,177.264z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.15" />
     <path
         android:fillColor="#E24B4B"
         android:pathData="M340.032,289.456c1.904,2.096,4.848,2.656,7.408,1.52c17.76-8.352,86.592-42.448,93.136-74.912
@@ -47,12 +47,12 @@ c-22.4-4.464-44.336,10.064-48.896,32.56C276.624,216.832,326.848,274.848,340.032,
         android:pathData="M329.408,277.12c4.368,5.312,8.16,9.488,10.64,12.256c1.904,2.08,4.848,2.752,7.408,1.616
 c17.76-8.352,86.592-42.448,93.136-74.912c1.328-6.368,0.944-12.528-0.576-18.416C439.344,201.84,429.76,250.448,329.408,277.12z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.15"
-        android:strokeAlpha="0.15"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M299.584,177.264c1.536,3.488,8.24,3.968,15.136,0.896c6.896-2.976,11.296-8.208,9.76-11.792
-c-1.44-3.504-8.24-3.872-15.136-0.896C302.448,168.448,298.144,173.76,299.584,177.264z" />
+c-1.44-3.504-8.24-3.872-15.136-0.896C302.448,168.448,298.144,173.76,299.584,177.264z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.15" />
     <path
         android:fillColor="#3E4347"
         android:pathData="M388.8,337.536c-12.32-7.104-56.224,30.128-132.8,28.4c-76.56,1.712-120.496-35.504-132.8-28.4
