--- a/app/src/main/res/drawable/ic_smiley_nervous_2.xml
+++ b/app/src/main/res/drawable/ic_smiley_nervous_2.xml
@@ -53,21 +53,21 @@ c-19.584-12.128-42.656-19.168-67.424-19.168C231.248,300.048,208.224,307.104,188.
         android:pathData="M129.92,320.672c0-14.48-26.208-53.136-26.208-53.136s-26.208,38.656-26.208,53.136
 s11.728,26.208,26.208,26.208S129.92,335.136,129.92,320.672z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.2"
-        android:strokeAlpha="0.2"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M118.72,331.84c-3.088,4.16-8.016,6.016-10.784,4c-2.768-2-2.464-7.088,0.624-11.408
-c3.088-4.32,7.872-6.16,10.64-4.16C122.112,322.272,121.808,327.52,118.72,331.84z" />
+c3.088-4.32,7.872-6.16,10.64-4.16C122.112,322.272,121.808,327.52,118.72,331.84z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.2" />
     <path
         android:fillColor="#45CBEA"
         android:pathData="M127.472,470.608c0-22.864-41.392-83.92-41.392-83.92s-41.392,61.056-41.392,83.92
 S63.216,512,86.08,512S127.472,493.472,127.472,470.608z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.2"
-        android:strokeAlpha="0.2"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M109.792,488.24c-4.864,6.576-12.672,9.504-17.056,6.336s-3.904-11.2,0.976-18.016
-c4.864-6.816,12.416-9.744,16.8-6.576C115.136,473.152,114.656,481.424,109.792,488.24z" />
+c4.864-6.816,12.416-9.744,16.8-6.576C115.136,473.152,114.656,481.424,109.792,488.24z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.2" />
 </vector>
