--- a/app/src/main/res/drawable/ic_smiley_surprised_2.xml
+++ b/app/src/main/res/drawable/ic_smiley_surprised_2.xml
@@ -59,10 +59,10 @@ C194.832,364.688,223.408,355.792,252.88,356.88z" />
 c5.28-6.72,13.44-10.4,21.92-9.92c1.6,0,3.36,0.16,5.28,0.16c8.16,0,15.84-0.96,22.88-2.56c9.44-2.24,19.68,0,26.72,6.88
 C298.736,395.888,304.336,406.768,305.776,418.928z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.2"
-        android:strokeAlpha="0.2"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M287.44,398.608c-1.28,2.4-6.08,2.72-10.88,0.32c-4.8-2.24-7.68-6.08-6.56-8.64
-c1.28-2.4,6.08-2.72,10.88-0.32C285.68,392.224,288.56,396.048,287.44,398.608z" />
+c1.28-2.4,6.08-2.72,10.88-0.32C285.68,392.224,288.56,396.048,287.44,398.608z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.2" />
 </vector>
