--- a/app/src/main/res/drawable/ic_smiley_wink.xml
+++ b/app/src/main/res/drawable/ic_smiley_wink.xml
@@ -14,13 +14,13 @@
 c43.92,35.52,99.84,56.72,160.72,56.72c141.36,0,256-114.56,256-256c0-60.88-21.2-116.8-56.72-160.72
 C474.8,103.68,512,175.52,512,256z" />
     <path
-        android:fillColor="#FFFFFF"
         android:fillAlpha="0.3"
-        android:strokeAlpha="0.3"
-        android:strokeWidth="1"
+        android:fillColor="#FFFFFF"
         android:pathData="M51.136,212.464c-4.832-1.28-7.712-6.256-6.432-11.088c19.472-73.104,76.512-132.304,148.864-154.48
 c4.784-1.456,9.856,1.216,11.328,6.016c1.472,4.784-1.216,9.856-6.016,11.328c-66.4,20.336-118.768,74.688-136.64,141.792
-C60.944,210.896,55.968,213.744,51.136,212.464z" />
+C60.944,210.896,55.968,213.744,51.136,212.464z"
+        android:strokeWidth="1"
+        android:strokeAlpha="0.3" />
     <path
         android:fillColor="#3E4347"
         android:pathData="M221.792,427.296C130.32,387.536,94.608,283.024,94.608,283.024
