--- a/app/src/main/res/layout/activity_donations.xml
+++ b/app/src/main/res/layout/activity_donations.xml
@@ -29,8 +29,8 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:drawableLeft="@drawable/money"
-            android:drawablePadding="5dp"
             android:drawableRight="@drawable/money"
+            android:drawablePadding="5dp"
             android:gravity="center"
             android:text="@string/donations_title"
             android:textAppearance="?android:attr/textAppearanceLarge"></TextView>
@@ -39,8 +39,8 @@
             android:id="@+id/donations_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"></FrameLayout>
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"></FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
